# ghost.ai

./: .gitignore  Cargo.toml  Makefile  README.md  ghost  rustfmt.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
scripts/: download-models.sh
src/: app.rs  channels.rs  cli.rs  console.rs  constants.rs  llm.rs  logger.rs  main.rs  memory_store.rs  security.rs  signal.rs  text_buffer.rs  text_state.rs  typer.rs  utils.rs
src/ai/: ctx.rs  llm.rs  mod.rs
src/api/routes/: chat.rs  mod.rs
src/console/: shell.rs
src/database/: mod.rs  queries.rs
src/embed/: api.rs  mod.rs
src/engine/: engine.rs  mod.rs  parser.rs  state.rs
src/hear/: mod.rs
src/llm/: anthropic.rs  google.rs  groq.rs  manager.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  provider.rs  together.rs
src/memory/: entry.rs  mod.rs  store.rs
src/platform/: macos.rs  mod.rs
src/runtime/: ai.rs  control.rs  keyboard.rs  mod.rs  state.rs  typer.rs
src/runtime/workers/: llm.rs  mod.rs  vision.rs
src/settings/: loader.rs  mod.rs  provider.rs  schema.rs  shortcuts.rs
src/state/: mod.rs  session.rs
src/tasks/: embed.rs  mod.rs  tracker.rs  typer.rs  vision.rs
src/tracker/: mod.rs
src/vision/: capture.rs  decode.rs  diff.rs  llm.rs  mod.rs  model.rs  monitor.rs  ocr.rs  types.rs  window.rs  worker.rs
