[package]
name = "ghostai"
version = "0.2.0-beta"
edition = "2021"
description = "Your second brain at the computer."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/ghost.ai"
license = "Apache-2.0"
publish = true

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
sea-orm = { version = "1.1.10", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
] }
enigo = "0.3.0"
rdev = "0.5.3"
reqwest = "0.12.15"
rig-core = "0.10.0"
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.21.3"
xcap = "0.4.1"
fs_extra = "1.3.0"
base64 = "0.22.1"
image = "0.25.6"
ocrs = "0.10.0"
rten = "0.16.0"
blake3 = "1.8.1"
chrono = "0.4.40"
axum = "0.8.3"
async-stream = "0.3.6"
tower-http = { version = "0.6.2", features = ["cors"] }
dirs = "6.0.0"
toml = "0.8.20"
sqlx = "0.8.5"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
colored = "3.0.0"
crossterm = "0.29.0"
clap = { version = "4.5.37", features = ["derive"] }
ghost_migration = "0.1.0"
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
[profile.coverage]
inherits = "release"
lto = "thin"
debug-assertions = true
opt-level = "z"
strip = true
[profile.dev.package."ocrs"]
opt-level = 3

[profile.dev.package."rten"]
opt-level = 3
