[package]
name = "ghost_migration"
version = "0.1.0"
edition = "2021"
description = "Your second brain at the computer."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/ghost.ai"
license = "Apache-2.0"
[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dirs = "6.0.0"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-native-tls"]
